<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logotext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:text="@string/logo_text"
        android:textSize="45dp"
        android:fontFamily="@font/fontfamily"/>

    <RadioGroup
        android:id="@+id/radio_group"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logotext"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일반학생"
            android:fontFamily="@font/fontfamily"/>

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="장애학생"
            android:fontFamily="@font/fontfamily"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/user_number"
        android:fontFamily="@font/fontfamily"/>

    <EditText
        android:id="@+id/et_eamil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_eamil"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/password"
        android:fontFamily="@font/fontfamily"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password">

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:onClick="signUp"
            android:text="@string/signup"
            android:theme="@style/BtnLooks"
            android:fontFamily="@font/fontfamily"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:onClick="signIn"
            android:theme="@style/BtnLooks"
            android:text="@string/signin"
            android:fontFamily="@font/fontfamily"/>

    </LinearLayout>


</RelativeLayout>